--- a/journal/201809.md
+++ b/journal/201809.md
@@ -8,7 +8,7 @@ Final version 1.3.0 of core software was released! Changes are the same as repor
 
 [dcrd](https://github.com/decred/dcrd): completed several steps towards [multipeer downloads](https://github.com/decred/dcrd/issues/1145), [improved](https://github.com/decred/dcrd/pull/1447) introduction to the software in the main [README](https://github.com/decred/dcrd/blob/master/README.md), continued porting cleanups and refactoring from upstream [btcd](https://github.com/btcsuite/btcd).
 
-Currently in review are [initial release](https://github.com/decred/dcrd/pull/1434) of smart [fee estimator](https://github.com/decred/dcrd/issues/1412) and a change to [UTXO set semantics](https://github.com/decred/dcrd/pull/1471). The latter is a large and important change that provides simpler handling, and resolves various issues with the previous approach. A lot of testing and careful review is needed so any help is welcome.
+Currently in review are [initial release](https://github.com/decred/dcrd/pull/1434) of smart [fee estimator](https://github.com/decred/dcrd/issues/1412) and a change to [UTXO set semantics](https://github.com/decred/dcrd/pull/1471). The latter is a large and important change that provides simpler handling, and resolves various issues with the previous approach. A lot of testing and careful review is needed so help is welcome.
 
 Educational series for new Decred developers by @matheusd added two episodes: [02 Simnet Setup](https://www.youtube.com/watch?v=QGbsU2PjpLM) shows how to automate simnet management with tmux and [03 Miner Reward Invalidation](https://www.youtube.com/watch?v=ECB8vDzOd1M) explains block validity rules.
 
@@ -24,7 +24,7 @@ Developers are welcome to comment on [this idea](https://github.com/decred/dcrwa
 
 [Android](https://github.com/decred/dcrandroid): update from @collins: "Second test release for dcrandroid is out. Major bugs have been fixed since last test. Latest code from SPV sync has been integrated. Once again, bug reports are welcome and issues can be opened [on GitHub](https://github.com/decred/dcrandroid/issues)". Ask in #dev room about the APK for testing.
 
-A new security page was added that allows to validate addresses and to sign/verify messages, similar to Decrediton's Security Center. Work on translations is beginning.
+A new security page was added that allows one to validate addresses and to sign/verify messages, similar to Decrediton's Security Center. Work on translations is beginning.
 
 Overall the app is quite stable and accepting more testers. Next milestone is getting the test app on the app store.
 
@@ -32,7 +32,7 @@ Overall the app is quite stable and accepting more testers. Next milestone is ge
 
 Nearest goal is to make the app crash free.
 
-Both mobile apps received new desigh themes.
+Both mobile apps received new design themes.
 
 [dcrdata](https://github.com/decred/dcrdata): v3.0 was released for mainnet! Highlights: [charts](https://explorer.dcrdata.org/charts), "merged debits" view, [agendas](https://explorer.dcrdata.org/agendas) page, Insight API support, side chain tracking, Go 1.11 support with module builds, numerous backend improvements. Full release notes [here](https://github.com/decred/dcrdata/releases/tag/v3.0.0). This release featured [9 contributors](https://twitter.com/chappjc/status/1039172760143060994) and development lead @chappjc [noted](https://twitter.com/chappjc/status/1039173243452772353): "This collaboration with @raedahgroup on our own block explorer and web API for @decredproject has been super productive.".
 
@@ -54,15 +54,15 @@ Dev activity stats for September: 219 active PRs, 197 commits, 28.7k added and 1
 
 ## Network
 
-Hashrate: started and ended the month around 75 PH/s, making the low of 60.5 and a new high of 110 PH/s. BeePool is again the leader with their share varied in 23-54%, followed by F2Pool 13-30%, Coinmine 4-6% and Luxor 3-5%. Like previously, there were multiple spikes of unidentified hashrate.
+Hashrate: started and ended the month around 75 PH/s, hitting a low of 60.5 and a new high of 110 PH/s. BeePool is again the leader with their share varying between 23-54%, followed by F2Pool 13-30%, Coinmine 4-6% and Luxor 3-5%. As in previous months, there were multiple spikes of unidentified hashrate.
 
-Staking: 30-day average ticket price is 98 DCR (+2.4). The price varied between 95.7 and 101.92 DCR. Locked DCR amount was 3.86-3.96 million DCR, or 45.7-46.5% of the supply.
+Staking: 30-day average ticket price is 98 DCR (+2.4). The price varied between 95.7 and 101.9 DCR. Locked DCR amount was 3.86-3.96 million DCR, or 45.7-46.5% of the supply.
 
-Nodes: there are 201 public listening nodes and 325 normal nodes per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: 5% are v1.4.0(pre) dev builds (+3%), 30% on v1.3.0 (+25%), 42% on v1.2.0 (-20%), 15% on v1.1.2 (-7%), 6% on v1.1.0. More than 76% of nodes run v1.2.0 and higher and therefore support client filters. Data of Oct 1.
+Nodes: there are 201 public listening nodes and 325 normal nodes per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: 5% are v1.4.0(pre) dev builds (+3%), 30% on v1.3.0 (+25%), 42% on v1.2.0 (-20%), 15% on v1.1.2 (-7%), 6% on v1.1.0. More than 76% of nodes run v1.2.0 and higher and therefore support client filters. Data as of Oct 1.
 
 ## ASICs
 
-Obelisk posted two updates on their [mailing list](https://us16.campaign-archive.com/home/?u=393b2698d17bdfe48ac0422ac&id=87ef82fd96). 70% of Batch 1 units are shipped, an extensive [user guide](http://support.obelisk.tech/category/28qat7hdvu-user-guide) is available, Obelisk Scanner application was released that allows to automatically [update firmware](http://support.obelisk.tech/article/1blv5te02q-upgrade-your-obelisk-firmware). First firmware update was released and bumped SC1 hashrate by 10-20%, added new pools and fixed multiple bugs. Next update will focus on DCR1. It is worth a special mention that the firmware source code is [now open](https://gitlab.com/NebulousLabs/obelisk-ob1)! Let us hope more manufacturers will follow this example.
+Obelisk posted two updates on their [mailing list](https://us16.campaign-archive.com/home/?u=393b2698d17bdfe48ac0422ac&id=87ef82fd96). 70% of Batch 1 units are shipped, an extensive [user guide](http://support.obelisk.tech/category/28qat7hdvu-user-guide) is available, Obelisk Scanner application was released that allows one to automatically [update firmware](http://support.obelisk.tech/article/1blv5te02q-upgrade-your-obelisk-firmware). First firmware update was released and bumped SC1 hashrate by 10-20%, added new pools and fixed multiple bugs. Next update will focus on DCR1. It is worth a special mention that the firmware source code is [now open](https://gitlab.com/NebulousLabs/obelisk-ob1)! Let us hope more manufacturers will follow this example.
 
 Whatsminer D10V1 was [announced](https://twitter.com/whatsminer/status/1042946674602201088) and is available for preorder.
 
@@ -214,7 +214,7 @@ Interesting [observation](https://twitter.com/ImacallyouJawdy/status/10399229799
 
 ASIC for Lyra2REv2 was [spotted](https://www.reddit.com/r/vertcoin/comments/9fhiy5/lyra2rev2_asic_supposedly_spotted/) on the web. Vertcoin team is preparing a new PoW algorithm. This would be the 3rd fork, after two [previous forks](https://medium.com/vertcoin-blog/vertcoin-a-call-to-action-against-asics-f8d47aef895d) to change the algorithm in 2014 and 2015.
 
-New research on private atomic swaps: the paper "Anonymous Atomic Swaps Using Homomorphic Hashing" attemps to break the public link between two transactions. ([bitcointalk](https://bitcointalk.org/index.php?topic=4980960.0), [r/decred](https://www.reddit.com/r/decred/comments/9c9c44/anonymous_atomic_swaps_using_homomorphic_hashing/))
+New research on private atomic swaps: the paper "Anonymous Atomic Swaps Using Homomorphic Hashing" attempts to break the public link between two transactions. ([bitcointalk](https://bitcointalk.org/index.php?topic=4980960.0), [r/decred](https://www.reddit.com/r/decred/comments/9c9c44/anonymous_atomic_swaps_using_homomorphic_hashing/))
 
 On Sep 18 Poloniex [announced](https://poloniex.com/press-releases/2018.09.18-Asset-Delistings/) delisting of 8 more assets. That day they took a 12-80% dive showing their dependence on this one exchange.
 
@@ -224,7 +224,7 @@ Coinbase [announced](https://blog.coinbase.com/new-asset-listing-process-a83ef29
 
 The New York State Office of the Attorney General posted [a study](https://virtualmarkets.ag.ny.gov/) of 13 exchanges that contains many insights.
 
-A critical vulnerability was discovered and [fixed](https://github.com/bitcoin/bitcoin/pull/14247) in Bitcoin Core. Few days later a [full disclosure](https://bitcoincore.org/en/2018/09/20/notice/) was posted revealing the severity of the bug. In a bitcointalk [thread](https://bitcointalk.org/index.php?topic=5035144.0) btcd was called 'amateur' despite not being vulnerable, and some Core developers voiced their concerns about multiple implementations. Bitcoin Unlimited developer who found the bug shared his perspective in a [blog post](https://medium.com/@awemany/600-microseconds-b70f87b0b2a6). Decred's vision so far is that more full node implementations is strength, just like for any Internet protocol.
+A critical vulnerability was discovered and [fixed](https://github.com/bitcoin/bitcoin/pull/14247) in Bitcoin Core. Few days later a [full disclosure](https://bitcoincore.org/en/2018/09/20/notice/) was posted revealing the severity of the bug. In a bitcointalk [thread](https://bitcointalk.org/index.php?topic=5035144.0) btcd was called 'amateur' despite not being vulnerable, and some Core developers voiced their concerns about multiple implementations. The Bitcoin Unlimited developer who found the bug shared his perspective in a [blog post](https://medium.com/@awemany/600-microseconds-b70f87b0b2a6). Decred's vision so far is that more full node implementations is a strength, just like for any Internet protocol.
 
 ## About This Issue
 
