Sep18: additions and fixes

--- a/journal/201809.md
+++ b/journal/201809.md
@@ -46,7 +46,7 @@ Trezor: proof of concept implementation for Trezor Model T firmware is [in the w
 
 [decred.org](https://github.com/decred/dcrweb): added 3rd party wallets, removed inactive PoW pools, removed web wallet and multiple fixes.
 
-@Richard-Red is collecting all Decred-related GitHub repositories in this [curated list](https://github.com/RichardRed0x/decred-on-github)
+@Richard-Red is building a [curated list](https://github.com/RichardRed0x/decred-on-github) of Decred-related GitHub repositories.
 
 Welcome to new people contributing for the first time: @klebe, @s_ben, @victorguedes, and PrimeDominus!
 
@@ -121,7 +121,7 @@ Upcoming:
 * [SF Blockchain Week](https://sfblockchainweek.io/) in San Francisco, USA on Oct 9. @lukebp will discuss DPoS vs PoS on a panel 9:30a-10:15a at the Titans of Tech Stage, Hilton Union Square.
 * [Decred Meetup](https://www.facebook.com/events/241045786567334/) in Casablanca, Morocco on Oct 27. @butterfly will host the event and talk about Decred in French.
 * [Texas Bitcoin Conference](https://texasbitcoinconference.com/) Austin, USA on Oct 27-28. @BAB: "The great thing about this is that it will also be a Decred Summit. We will have half of the conference dedicated to Decred topics, updates, etc."
-* [Websummit](https://websummit.com/) in Lisbon, Portugal on Nov 5-8. Marco Peerboom will be on a panel discussing "2018: A Rollercoaster Year for Cryptocurrencies"
+* [Websummit](https://websummit.com/) in Lisbon, Portugal on Nov 5-8. @moo31337 will be on a panel discussing "2018: A Rollercoaster Year for Cryptocurrencies"
 
 We'll begin shortly reviewing conferences and events planned for the first half of 2019. Highlights are sure to include The North American Bitcoin Conference in Miami, January 16-18, and Consensus in NYC, May 14-16. If you have suggestions of events or conferences Decred should attend, please share them in [#event_planning](https://riot.im/app/#/room/#event_planning:decred.org). In 2019, we would like to expand our presence in Europe, Asia, and South America, and we're looking for community members to help identify and staff those events.
 
@@ -153,8 +153,10 @@ Videos:
 
 Featured articles:
 
-* Decentralized autonomous funding of blockchain projects by Richard Red ([medium](https://medium.com/@richardred/decentralized-autonomous-funding-of-blockchain-projects-3c0c233ae4ad), discussion on [r/decred](https://www.reddit.com/r/decred/comments/9cyw0p/decentralized_autonomous_funding_of_blockchain/) and [r/dashpay](https://www.reddit.com/r/dashpay/comments/9cywcs/decentralized_autonomous_funding_of_blockchain/))
-* An overview of the Politeia system architecture by Fernando Abolafio ([medium](https://medium.com/decred/an-overview-of-decreds-politeia-system-architecture-8741c13b35d8))
+* Decentralized autonomous funding of blockchain projects by @Richard-Red ([medium](https://medium.com/@richardred/decentralized-autonomous-funding-of-blockchain-projects-3c0c233ae4ad), discussion on [r/decred](https://www.reddit.com/r/decred/comments/9cyw0p/decentralized_autonomous_funding_of_blockchain/) and [r/dashpay](https://www.reddit.com/r/dashpay/comments/9cywcs/decentralized_autonomous_funding_of_blockchain/))
+* How to obtain Decred? by @mm ([stakey.club](https://stakey.club/en/how-to-obtain-decred/), [in Portuguese](https://stakey.club/pt/como-obter-decred/))
+* Digital certificates for RPC connections by @mm ([stakey.club](https://stakey.club/en/digital-certificates-for-rpc-connections/), [in Portuguese](https://stakey.club/pt/certificados-digitais-de-conexoes-rpc/))
+* An overview of the Politeia system architecture by @fernandoabolafio ([medium](https://medium.com/decred/an-overview-of-decreds-politeia-system-architecture-8741c13b35d8))
 * One of Investors' Favorite Governance Blockchains Is Handing Over $20 Million by Brady Dale ([coindesk.com](https://www.coindesk.com/one-of-investors-favorite-governance-blockchains-is-handing-over-20-million/), discussion on [r/decred](https://www.reddit.com/r/decred/comments/9hfjwg/one_of_investors_favorite_governance_blockchains/))
 
 Articles:
@@ -196,6 +198,8 @@ Highlights:
 
   > The trouble with infrastructure, "thin" protocols in particular, is that someone has to build them at a cost. e.g. LN takes a ton of work, doesn't necessarily generate value itself, but it magnifies the value of BTC or whatever coin that uses it. I see the DEX in a similar light - whoever creates it is not going to make a bunch of money from it, but it will magnify the value of the underlying asset(s) that end up having a deep order book on the DEX. (@jy-p in [#dex](https://riot.im/app/#/room/!MfifnUCLrfSeRkMDwZ:decred.org/$15369779137110eyQvt:decred.org))
 
+Twitter: [why](https://twitter.com/willwarren89/status/1037082719543414785) decentralized governance and funding are necessary for network survival and the power of controlling the narrative; [learning](https://twitter.com/RichardRed0x/status/1041640095735050241) about governance more broadly by watching its evolution in cryptocurrency space, importance of community consensus and communications infrastructure.
+
 Reddit: yet another strong [pitch](https://www.reddit.com/r/CryptoCurrency/comments/9c9x4v/daily_discussion_megathread_september_2_2018/e5afvv6/?context=1) by @solar; [question](https://www.reddit.com/r/decred/comments/9fkhzg/planned_implimtations_of_buyer_protections_in_the/) about buyer protections; [dcrtime](https://www.reddit.com/r/decred/comments/9fu2b5/questions_regarding_dcrtime/) internals; a [proposal](https://www.reddit.com/r/decred/comments/9g0c2f/proposal_uct_hoodie_sponsor/) to sponsor hoodies in the University of Cape Town; Lightning Network [support](https://www.reddit.com/r/decred/comments/9jof7l/lightning_network/) for altcoins.
 
 Chats: [skills](https://riot.im/app/#/room/!tfqymymiNgzSUJTHqS:decred.org/$1536254775350XgGZM:decred.org) to operate a stakepool; [voting details](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$1536282670992Lzaxm:decred.org): 2 of 3 votes can approve a block, what votes really approve are regular tx, etc; scriptless script [atomic swaps](https://riot.im/app/#/room/!MfifnUCLrfSeRkMDwZ:decred.org/$15363399581416GcSxk:decred.org) using Schnorr adaptor signatures; [dev dashboard](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$15366012302783HCseB:decred.org), choosing work, people do best when working on what interests them most; [opportunities](https://riot.im/app/#/room/!NKtIRqGOEGaZvSQkKl:decred.org/$15365843362546GFEco:decred.org) for governments and enterprise for anchoring legal data to blockchain; [terminology](https://riot.im/app/#/room/!lbzTjhzNbIaDbuAxkS:decred.org/$15365959712739RwKzS:decred.org): DAO vs DAE; [human-friendly payments](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$15366212803111onRuk:decred.org), sharing xpub vs payment protocols; [funding](https://riot.im/app/#/room/!NKtIRqGOEGaZvSQkKl:decred.org/$15367076584151CZzGw:decred.org) btcsuite development; Politeia [vote types](https://riot.im/app/#/room/!tIDEIWechmqCLjPiui:decred.org/$15367054844084keNyd:decred.org): approval vote, sentiment vote and a defund vote, also linking proposals and financial statements; [algo trading](https://riot.im/app/#/room/!zxBsqZRxjbQoLqJRwe:decred.org/$15367708134607anafN:decred.org) and programming languages (yes, on #trading!); [alternative implementation](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$15368126254994dmgGz:decred.org), C/C++/Go/Rust; [HFTs](https://riot.im/app/#/room/!MfifnUCLrfSeRkMDwZ:decred.org/$15368550325539BXZgQ:decred.org), algo trading, fake volume and slippage; [offline wallets](https://riot.im/app/#/room/!wSdymYrEpBhsWlDJuk:decred.org/$15368387415218SwJEs:decred.org), usb/write-only media/optical scanners vs auditing traffic between dcrd and dcrwallet; [Proof of Activity](https://riot.im/app/#/room/!lbzTjhzNbIaDbuAxkS:decred.org/$15369345446336QswCH:decred.org) did not inspire Decred but spurred Decred to get moving, Wikipedia page hurdles; [how](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$15369950287130SsqHs:decred.org) stakeholders could veto blocks; [how many](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$15372272758102GSbMW:decred.org) votes are needed to approve a proposal; [why](https://riot.im/app/#/room/!NKtIRqGOEGaZvSQkKl:decred.org/$15372760218373lJZBH:decred.org) Decrediton uses Electron; [CVE-2018-17144](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153755480811319lDgLg:decred.org) and over-dependence on single Bitcoin implementation, btcsuite, fuzz testing; tracking [proposal progress](https://riot.im/app/#/room/!VFRvyndKpzcLrVslQD:decred.org/$15373927039908qzFSi:decred.org) after voting and funding; [why](https://riot.im/app/#/room/!dhHYPTtCtvPSUfTepT:decred.org/$153745237210372jSYvO:decred.org) the wallet does not store the seed at all; power connectors, electricity, wiring and [fire safety](https://riot.im/app/#/room/!NNzHoaSdnsbZDQOXJr:decred.org/$153781550312816lSboL:decred.org); reasonable [spendings](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153781704512850QVMij:decred.org) from project fund; [ways](https://riot.im/app/#/room/!LmKzrmxJIXNHNiEmIh:decred.org/$153781182112736HAaYg:decred.org) to measure sync progress better than block height; [using Politeia](https://riot.im/app/#/room/!VFRvyndKpzcLrVslQD:decred.org/$153797746114229LqTyT:decred.org) without email address; [concurrency in Go](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153813778015922LZeWW:decred.org), locks vs channels.
@@ -213,6 +217,10 @@ Interesting [observation](https://twitter.com/ImacallyouJawdy/status/10399229799
 ## Relevant External
 
 ASIC for Lyra2REv2 was [spotted](https://www.reddit.com/r/vertcoin/comments/9fhiy5/lyra2rev2_asic_supposedly_spotted/) on the web. Vertcoin team is preparing a new PoW algorithm. This would be the 3rd fork, after two [previous forks](https://medium.com/vertcoin-blog/vertcoin-a-call-to-action-against-asics-f8d47aef895d) to change the algorithm in 2014 and 2015.
+
+A report titled [The Positive Externalities of Bitcoin Mining](https://medium.com/nodeblockchain/bitcoin-energy-b230a9d7dd5d) discusses the benefits of PoW mining that are often overlooked by the critics of its energy use.
+
+[A Brief Study of Cryptonetwork Forks](https://www.placeholder.vc/blog/2018/9/17/a-brief-study-of-cryptonetwork-forks) by Alex Evans of Placeholder studies the behavior of users, developers and miners after the fork, and makes the cases that it is hard for child chains to attract users and developers from their parent chains.
 
 New research on private atomic swaps: the paper "Anonymous Atomic Swaps Using Homomorphic Hashing" attempts to break the public link between two transactions. ([bitcointalk](https://bitcointalk.org/index.php?topic=4980960.0), [r/decred](https://www.reddit.com/r/decred/comments/9c9c44/anonymous_atomic_swaps_using_homomorphic_hashing/))
 
