--- a/journal/201809.md
+++ b/journal/201809.md
@@ -129,6 +129,8 @@ We'll begin shortly reviewing conferences and events planned for the first half 
 
 August issue of Decred Journal was translated to [Russian](https://medium.com/decred-russia/decred-journal-%D0%B0%D0%B2%D0%B3%D1%83%D1%81%D1%82-2018-8375e838954). Many thanks to @DZ!
 
+New quality articles by @mm at [stakey.club](https://stakey.club/): [How to obtain Decred?](https://stakey.club/en/how-to-obtain-decred/) and [Digital certificates for RPC connections](https://stakey.club/en/digital-certificates-for-rpc-connections/). All articles are also available [in Portuguese](https://stakey.club/pt/articles/).
+
 Rency cryptocurrency ratings published a [report](https://rency.com/decred) on Decred and incorporated a lot of feedback from the community [on Reddit](https://www.reddit.com/r/decred/comments/9ckvtp/decred_rency_cryptocurrency_rating/).
 
 September issue of Chinese CCID ratings was [published](http://special.ccidnet.com/pub-bc-eval/) ([snapshot](https://archive.today/anHVk)), Decred is still at the bottom.
