--- a/journal/201809.md
+++ b/journal/201809.md
@@ -129,8 +129,6 @@ We'll begin shortly reviewing conferences and events planned for the first half 
 
 August issue of Decred Journal was translated to [Russian](https://medium.com/decred-russia/decred-journal-%D0%B0%D0%B2%D0%B3%D1%83%D1%81%D1%82-2018-8375e838954). Many thanks to @DZ!
 
-New quality articles by @mm at [stakey.club](https://stakey.club/): [How to obtain Decred?](https://stakey.club/en/how-to-obtain-decred/) and [Digital certificates for RPC connections](https://stakey.club/en/digital-certificates-for-rpc-connections/). All articles are also available [in Portuguese](https://stakey.club/pt/articles/).
-
 Rency cryptocurrency ratings published a [report](https://rency.com/decred) on Decred and incorporated a lot of feedback from the community [on Reddit](https://www.reddit.com/r/decred/comments/9ckvtp/decred_rency_cryptocurrency_rating/).
 
 September issue of Chinese CCID ratings was [published](http://special.ccidnet.com/pub-bc-eval/) ([snapshot](https://archive.today/anHVk)), Decred is still at the bottom.
@@ -156,6 +154,8 @@ Videos:
 Featured articles:
 
 * Decentralized autonomous funding of blockchain projects by @Richard-Red ([medium](https://medium.com/@richardred/decentralized-autonomous-funding-of-blockchain-projects-3c0c233ae4ad), discussion on [r/decred](https://www.reddit.com/r/decred/comments/9cyw0p/decentralized_autonomous_funding_of_blockchain/) and [r/dashpay](https://www.reddit.com/r/dashpay/comments/9cywcs/decentralized_autonomous_funding_of_blockchain/))
+* How to obtain Decred? by @mm ([stakey.club](https://stakey.club/en/how-to-obtain-decred/), [in Portuguese](https://stakey.club/pt/como-obter-decred/))
+* Digital certificates for RPC connections by @mm ([stakey.club](https://stakey.club/en/digital-certificates-for-rpc-connections/), [in Portuguese](https://stakey.club/pt/certificados-digitais-de-conexoes-rpc/))
 * An overview of the Politeia system architecture by @fernandoabolafio ([medium](https://medium.com/decred/an-overview-of-decreds-politeia-system-architecture-8741c13b35d8))
 * One of Investors' Favorite Governance Blockchains Is Handing Over $20 Million by Brady Dale ([coindesk.com](https://www.coindesk.com/one-of-investors-favorite-governance-blockchains-is-handing-over-20-million/), discussion on [r/decred](https://www.reddit.com/r/decred/comments/9hfjwg/one_of_investors_favorite_governance_blockchains/))
 
