--- a/journal/201809.md
+++ b/journal/201809.md
@@ -198,6 +198,8 @@ Highlights:
 
   > The trouble with infrastructure, "thin" protocols in particular, is that someone has to build them at a cost. e.g. LN takes a ton of work, doesn't necessarily generate value itself, but it magnifies the value of BTC or whatever coin that uses it. I see the DEX in a similar light - whoever creates it is not going to make a bunch of money from it, but it will magnify the value of the underlying asset(s) that end up having a deep order book on the DEX. (@jy-p in [#dex](https://riot.im/app/#/room/!MfifnUCLrfSeRkMDwZ:decred.org/$15369779137110eyQvt:decred.org))
 
+Twitter: [why](https://twitter.com/willwarren89/status/1037082719543414785) decentralized governance and funding are necessary for network survival and the power of controlling the narrative; [learning](https://twitter.com/RichardRed0x/status/1041640095735050241) about governance more broadly by watching its evolution in cryptocurrency space, importance of community consensus and communications infrastructure.
+
 Reddit: yet another strong [pitch](https://www.reddit.com/r/CryptoCurrency/comments/9c9x4v/daily_discussion_megathread_september_2_2018/e5afvv6/?context=1) by @solar; [question](https://www.reddit.com/r/decred/comments/9fkhzg/planned_implimtations_of_buyer_protections_in_the/) about buyer protections; [dcrtime](https://www.reddit.com/r/decred/comments/9fu2b5/questions_regarding_dcrtime/) internals; a [proposal](https://www.reddit.com/r/decred/comments/9g0c2f/proposal_uct_hoodie_sponsor/) to sponsor hoodies in the University of Cape Town; Lightning Network [support](https://www.reddit.com/r/decred/comments/9jof7l/lightning_network/) for altcoins.
 
 Chats: [skills](https://riot.im/app/#/room/!tfqymymiNgzSUJTHqS:decred.org/$1536254775350XgGZM:decred.org) to operate a stakepool; [voting details](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$1536282670992Lzaxm:decred.org): 2 of 3 votes can approve a block, what votes really approve are regular tx, etc; scriptless script [atomic swaps](https://riot.im/app/#/room/!MfifnUCLrfSeRkMDwZ:decred.org/$15363399581416GcSxk:decred.org) using Schnorr adaptor signatures; [dev dashboard](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$15366012302783HCseB:decred.org), choosing work, people do best when working on what interests them most; [opportunities](https://riot.im/app/#/room/!NKtIRqGOEGaZvSQkKl:decred.org/$15365843362546GFEco:decred.org) for governments and enterprise for anchoring legal data to blockchain; [terminology](https://riot.im/app/#/room/!lbzTjhzNbIaDbuAxkS:decred.org/$15365959712739RwKzS:decred.org): DAO vs DAE; [human-friendly payments](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$15366212803111onRuk:decred.org), sharing xpub vs payment protocols; [funding](https://riot.im/app/#/room/!NKtIRqGOEGaZvSQkKl:decred.org/$15367076584151CZzGw:decred.org) btcsuite development; Politeia [vote types](https://riot.im/app/#/room/!tIDEIWechmqCLjPiui:decred.org/$15367054844084keNyd:decred.org): approval vote, sentiment vote and a defund vote, also linking proposals and financial statements; [algo trading](https://riot.im/app/#/room/!zxBsqZRxjbQoLqJRwe:decred.org/$15367708134607anafN:decred.org) and programming languages (yes, on #trading!); [alternative implementation](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$15368126254994dmgGz:decred.org), C/C++/Go/Rust; [HFTs](https://riot.im/app/#/room/!MfifnUCLrfSeRkMDwZ:decred.org/$15368550325539BXZgQ:decred.org), algo trading, fake volume and slippage; [offline wallets](https://riot.im/app/#/room/!wSdymYrEpBhsWlDJuk:decred.org/$15368387415218SwJEs:decred.org), usb/write-only media/optical scanners vs auditing traffic between dcrd and dcrwallet; [Proof of Activity](https://riot.im/app/#/room/!lbzTjhzNbIaDbuAxkS:decred.org/$15369345446336QswCH:decred.org) did not inspire Decred but spurred Decred to get moving, Wikipedia page hurdles; [how](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$15369950287130SsqHs:decred.org) stakeholders could veto blocks; [how many](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$15372272758102GSbMW:decred.org) votes are needed to approve a proposal; [why](https://riot.im/app/#/room/!NKtIRqGOEGaZvSQkKl:decred.org/$15372760218373lJZBH:decred.org) Decrediton uses Electron; [CVE-2018-17144](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153755480811319lDgLg:decred.org) and over-dependence on single Bitcoin implementation, btcsuite, fuzz testing; tracking [proposal progress](https://riot.im/app/#/room/!VFRvyndKpzcLrVslQD:decred.org/$15373927039908qzFSi:decred.org) after voting and funding; [why](https://riot.im/app/#/room/!dhHYPTtCtvPSUfTepT:decred.org/$153745237210372jSYvO:decred.org) the wallet does not store the seed at all; power connectors, electricity, wiring and [fire safety](https://riot.im/app/#/room/!NNzHoaSdnsbZDQOXJr:decred.org/$153781550312816lSboL:decred.org); reasonable [spendings](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153781704512850QVMij:decred.org) from project fund; [ways](https://riot.im/app/#/room/!LmKzrmxJIXNHNiEmIh:decred.org/$153781182112736HAaYg:decred.org) to measure sync progress better than block height; [using Politeia](https://riot.im/app/#/room/!VFRvyndKpzcLrVslQD:decred.org/$153797746114229LqTyT:decred.org) without email address; [concurrency in Go](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153813778015922LZeWW:decred.org), locks vs channels.
