Dev: integrate feedback from oregonisaac

--- a/journal/201809.md
+++ b/journal/201809.md
@@ -4,7 +4,7 @@
 
 ## Development
 
-Final version 1.3.0 of core software was released! Changes are the same as reported in the [previous issue](https://xaur.github.io/decred-news/journal/201808) for the RC1 version, plus some bugfixes that landed in RC2 and the 1.3.0 final. Read the full release notes and grab the downloads [on GitHub](https://github.com/decred/decred-binaries/releases/tag/v1.3.0). As always, don't forget to verify signatures.
+Final version 1.3.0 of the core software was released bringing all the enhancements reported [last month](https://xaur.github.io/decred-news/journal/201808) to the rest of the community. The groundwork for SPV (simplified payment verification) is complete, another reduction of fees is being deployed, and performance stepped up once again with a 50% reduction in startup time, 20% increased sync speed and more than 3x faster peer delivery of block headers (a key update for SPV). SPV and Politeia integrations in Decrediton desktop wallet are available for testing by experienced users. Read the full release notes and get the downloads [on GitHub](https://github.com/decred/decred-binaries/releases/tag/v1.3.0). As always, don't forget to verify signatures.
 
 [dcrd](https://github.com/decred/dcrd): completed several steps towards [multipeer downloads](https://github.com/decred/dcrd/issues/1145), [improved](https://github.com/decred/dcrd/pull/1447) introduction to the software in the main [README](https://github.com/decred/dcrd/blob/master/README.md), continued porting cleanups and refactoring from upstream [btcd](https://github.com/btcsuite/btcd).
 
