--- a/journal/201809.md
+++ b/journal/201809.md
@@ -117,7 +117,7 @@ Attended:
 
 Upcoming:
 
-* [Bitcoin Meetup CDMX](https://www.meetup.com/Bitcoin-Meetup-Ciudad-de-Mexico/events/255035235/) in Mexico City on Oct 6.
+* [Bitcoin Meetup CDMX](https://www.meetup.com/Bitcoin-Meetup-Ciudad-de-Mexico/events/255035235/) in Mexico City on Oct 6. @elian will be talking about Decred at the oldest Bitcoin meetup in Mexico.
 * [SF Blockchain Week](https://sfblockchainweek.io/) in San Francisco, USA on Oct 9. @lukebp will discuss DPoS vs PoS on a panel 9:30a-10:15a at the Titans of Tech Stage, Hilton Union Square.
 * [Decred Meetup](https://www.facebook.com/events/241045786567334/) in Casablanca, Morocco on Oct 27. @butterfly will host the event and talk about Decred in French.
 * [Texas Bitcoin Conference](https://texasbitcoinconference.com/) Austin, USA on Oct 27-28. @BAB: "The great thing about this is that it will also be a Decred Summit. We will have half of the conference dedicated to Decred topics, updates, etc."
