Rel Ext: vuln link

--- a/journal/201809.md
+++ b/journal/201809.md
@@ -232,7 +232,7 @@ Coinbase [announced](https://blog.coinbase.com/new-asset-listing-process-a83ef29
 
 The New York State Office of the Attorney General posted [a study](https://virtualmarkets.ag.ny.gov/) of 13 exchanges that contains many insights.
 
-A critical vulnerability was discovered and [fixed](https://github.com/bitcoin/bitcoin/pull/14247) in Bitcoin Core. Few days later a [full disclosure](https://bitcoincore.org/en/2018/09/20/notice/) was posted revealing the severity of the bug. In a bitcointalk [thread](https://bitcointalk.org/index.php?topic=5035144.0) btcd was called 'amateur' despite not being vulnerable, and some Core developers voiced their concerns about multiple implementations. The Bitcoin Unlimited developer who found the bug shared his perspective in a [blog post](https://medium.com/@awemany/600-microseconds-b70f87b0b2a6). Decred's vision so far is that more full node implementations is a strength, just like for any Internet protocol.
+A critical [vulnerability](https://bitcoinmagazine.com/articles/good-bad-and-ugly-details-one-bitcoins-nastiest-bugs-yet/) was discovered and [fixed](https://github.com/bitcoin/bitcoin/pull/14247) in Bitcoin Core. Few days later a [full disclosure](https://bitcoincore.org/en/2018/09/20/notice/) was posted revealing the severity of the bug. In a bitcointalk [thread](https://bitcointalk.org/index.php?topic=5035144.0) btcd was called 'amateur' despite not being vulnerable, and some Core developers voiced their concerns about multiple implementations. The Bitcoin Unlimited developer who found the bug shared his perspective in a [blog post](https://medium.com/@awemany/600-microseconds-b70f87b0b2a6). Decred's vision so far is that more full node implementations is a strength, just like for any Internet protocol.
 
 ## About This Issue
 
