--- a/journal/201809.md
+++ b/journal/201809.md
@@ -16,7 +16,7 @@ Finally, a [pull request template](https://github.com/decred/dcrd/blob/master/.g
 
 [dcrwallet](https://github.com/decred/dcrwallet): bugfixes and RPC improvements to support desktop and mobile wallets.
 
-Developers are welcome to comment on [this idea](https://github.com/decred/dcrwallet/issues/1217) to derive stakepool keys from the HD wallet seed. This would eliminate the need to backup and restore redeem scripts, thus greatly improving wallet UX. (_missed in July issue_)
+Developers are welcome to comment on [this idea](https://github.com/decred/dcrwallet/issues/1217) to derive stakepool keys from the HD wallet seed. This would eliminate the need to backup and restore redeem scripts, thus greatly improving wallet UX. (_ed: missed in July issue_)
 
 [Decrediton](https://github.com/decred/decrediton): bugfixes, refactoring to make the sync process more robust, new [loading animations](https://github.com/decred/decrediton/issues/1612), design polishing.
 
@@ -135,7 +135,7 @@ September issue of Chinese CCID ratings was [published](http://special.ccidnet.c
 
 Videos:
 
-* The underbelly of blockchain Governance - fiat licensing and our code with Marco Peerboom and Chris DeRose ([youtube](https://www.youtube.com/watch?v=6gJomFcj4DQ), [tweet](https://twitter.com/derose/status/1039177813448900608), [r/decred](https://www.reddit.com/r/decred/comments/9fawgp/the_underbelly_of_blockchain_governance_fiat/), _missed in August issue_)
+* The underbelly of blockchain Governance - fiat licensing and our code with Marco Peerboom and Chris DeRose ([youtube](https://www.youtube.com/watch?v=6gJomFcj4DQ), [tweet](https://twitter.com/derose/status/1039177813448900608), [r/decred](https://www.reddit.com/r/decred/comments/9fawgp/the_underbelly_of_blockchain_governance_fiat/), _ed: missed in August issue_)
 
   Insightful dialogue about men's underwear, licenses, subtleties of GPL, BSD wars, tiling window managers and much more.
 * Introduction to Decred (Korean, [youtube](https://www.youtube.com/watch?v=gTgGUlcNTd0))
@@ -162,16 +162,16 @@ Featured articles:
 Articles:
 
 * What is Decred? ([qoinbook.com](https://qoinbook.com/decred/))
-* Decred Cryptocurrency Gives Analysis of Dash ([dashforcenews.com](https://www.dashforcenews.com/decred-cryptocurrency-gives-analysis-of-dash/), _Ed: Good job, Decred Cryptocurrency!_)
+* Decred Cryptocurrency Gives Analysis of Dash ([dashforcenews.com](https://www.dashforcenews.com/decred-cryptocurrency-gives-analysis-of-dash/), _ed: Good job, Decred Cryptocurrency!_)
 * Decred Price Analysis: Alterations to blockchain governance ([bravenewcoin.com](https://bravenewcoin.com/news/decred-price-analysis-alterations-to-blockchain-governance/), [snapshot](https://archive.today/AihCi) for non-js readers)
 * Decred: A Different Kind of Hybrid ([cryptodetail.com](https://cryptodetail.com/decred-different-kind-hybrid))
 * Decred Gets Listed on KuCoin as Asset Nears 4-Month Lows ([cryptovest.com](https://cryptovest.com/news/decred-dcr-gets-listed-on-kucoin-as-asset-nears-4-month-lows/))
-* From PoS to dBFT: A Brief Review of Consensus Protocols ([cointelegraph.com](https://cointelegraph.com/news/from-pos-to-dbft-a-brief-review-of-consensus-protocols), [tweet](https://twitter.com/Cointelegraph/status/1040302092185952257), _Ed: Decred is mistakenly categorized as pure PoS_)
+* From PoS to dBFT: A Brief Review of Consensus Protocols ([cointelegraph.com](https://cointelegraph.com/news/from-pos-to-dbft-a-brief-review-of-consensus-protocols), [tweet](https://twitter.com/Cointelegraph/status/1040302092185952257), _ed: Decred is mistakenly categorized as pure PoS_)
 * What is Decred? (Spanish, [hardwareate.com](https://hardwareate.com/que-es-decred))
 * Decred Technical Analysis: Breakout Possible, but Which Way Will it Go? ([cryptovest.com](https://cryptovest.com/news/decred-dcr-technical-analysis-breakout-possible-but-which-way-will-it-go/))
 * What is Decred and is it a Credible Blockchain Project? ([blockchainreporter.net](http://www.blockchainreporter.net/2018/09/16/what-is-decred-dcr-and-is-it-a-credible-blockchain-project/))
 * Governing Decentralization: How On-Chain Voting Protocols Operate and Vary ([cointelegraph.com](https://cointelegraph.com/news/governing-decentralization-how-on-chain-voting-protocols-operate-and-vary), Spanish version [here](https://es.cointelegraph.com/news/governing-decentralization-how-on-chain-voting-protocols-operate-and-vary))
-* Decred: A virtual currency with a hybrid approval system combining PoW and PoS (Japanese, [cryptocurrency.theater](https://cryptocurrency.theater/5340/), _Ed: excellent domain name_)
+* Decred: A virtual currency with a hybrid approval system combining PoW and PoS (Japanese, [cryptocurrency.theater](https://cryptocurrency.theater/5340/), _ed: excellent domain name_)
 * What is Blockchain Governance? Complete Beginner's Guide ([blockonomi.com](https://blockonomi.com/blockchain-governance/), discussion on [r/decred](https://www.reddit.com/r/decred/comments/9hqakq/what_is_blockchain_governance_complete_guide/))
 * Antminer DR3 - Bitmain's Next Target Is Decred ([cryptodisrupt.com](https://cryptodisrupt.com/antminer-dr3-bitmains-next-target-is-decred/))
 * Q4 2018 Bitcoin Mining Projections ([theminersunion.com](http://theminersunion.com/2018/09/25/q4-2018-bitcoin-mining-projections/), [snapshot](https://archive.today/oquRM) for non-js readers)
