--- a/journal/201809.md
+++ b/journal/201809.md
@@ -244,4 +244,4 @@ Feedback is appreciated: please comment on [Reddit]({}), [GitHub](https://github
 
 Contributions are also welcome: some areas are adding content, pre-release review or translations to other languages.
 
-Credits (Slack names, alphabetical order): {}, {} and {}.
+Credits (Slack names, alphabetical order): bee, Dustorf, jz, oregonisaac, raedah and Richard-Red.
