Add quote for Dustorf

--- a/journal/201809.md
+++ b/journal/201809.md
@@ -96,9 +96,9 @@ The birth of a Brazilian girl was registered on the Decred blockchain using Orig
 
 Advertising report for September is [ready](https://www.reddit.com/r/decred/comments/9lgalv/september_2018_decred_ad_reports/). Next month the graphics for all the ads will be changing.
 
-Marketing might seem quiet right now, but a ton is actually going on behind the scenes to put the right foundation in place for the future. Discovery data are being analyzed to generate a positioning strategy, as well as a messaging hierarchy that can guide how to talk about Decred. This will all be agreed upon via consensus of the community in the work channels, and materials will be distributed.
-
-Next, work is being done to identify the right PR partner to help with media relations, media training, and coordination at events. While all of this is coming up to speed, we believe the website needs a refresher reflecting the soon to be agreed upon messaging, plus a more intuitive architecture to make it easier to navigate.
+> Marketing might seem quiet right now, but a ton is actually going on behind the scenes to put the right foundation in place for the future. Discovery data are being analyzed to generate a positioning strategy, as well as a messaging hierarchy that can guide how to talk about Decred. This will all be agreed upon via consensus of the community in the work channels, and materials will be distributed.
+> 
+> Next, work is being done to identify the right PR partner to help with media relations, media training, and coordination at events. While all of this is coming up to speed, we believe the website needs a refresher reflecting the soon to be agreed upon messaging, plus a more intuitive architecture to make it easier to navigate. (@Dustorf)
 
 ## Events
 
@@ -121,7 +121,7 @@ Upcoming:
 * [Texas Bitcoin Conference](https://texasbitcoinconference.com/) Austin, USA on Oct 27-28. @BAB: "The great thing about this is that it will also be a Decred Summit. We will have half of the conference dedicated to Decred topics, updates, etc."
 * [Websummit](https://websummit.com/) in Lisbon, Portugal on Nov 5-8. @moo31337 will be on a panel discussing "2018: A Rollercoaster Year for Cryptocurrencies"
 
-We'll begin shortly reviewing conferences and events planned for the first half of 2019. Highlights are sure to include The North American Bitcoin Conference in Miami, January 16-18, and Consensus in NYC, May 14-16. If you have suggestions of events or conferences Decred should attend, please share them in [#event_planning](https://riot.im/app/#/room/#event_planning:decred.org). In 2019, we would like to expand our presence in Europe, Asia, and South America, and we're looking for community members to help identify and staff those events.
+> We'll begin shortly reviewing conferences and events planned for the first half of 2019. Highlights are sure to include The North American Bitcoin Conference in Miami (Jan 16-18) and Consensus in NYC (May 14-16). If you have suggestions of events or conferences Decred should attend, please share them in [#event_planning](https://riot.im/app/#/room/#event_planning:decred.org). In 2019, we would like to expand our presence in Europe, Asia, and South America, and we're looking for community members to help identify and staff those events. (@Dustorf)
 
 ## Media
 
