--- a/journal/201809.md
+++ b/journal/201809.md
@@ -22,7 +22,7 @@ Developers are welcome to comment on [this idea](https://github.com/decred/dcrwa
 
 [Politeia](https://github.com/decred/politeia): multiple [improvements](https://github.com/decred/politeia/pull/472) to the CLI client (security conscious users with more funds at risk might prefer CLI) and security hardening. A [feature](https://github.com/decred/politeia/issues/479) to deprecate or timeout proposals was identified as necessary for initial release and the work started. A privacy [enhancement](https://github.com/decred/politeia/issues/486) to not leak metadata of ticket holders was [merged](https://github.com/decred/politeia/pull/487).
 
-[Android](https://github.com/decred/dcrandroid): update from @collins: "Second test release for dcrandroid is out. Major bugs have been fixed since last test. Latest code from SPV sync has been integrated. Once again, bug reports are welcome and issues can be opened [on GitHub](https://github.com/decred/dcrandroid/issues)". Ask in #dev room about the APK for testing.
+[Android](https://github.com/decred/dcrandroid): update from @collins: "Second test release for dcrandroid is out. Major bugs have been fixed since last test. Latest code from SPV sync has been integrated. Once again, bug reports are welcome and issues can be opened [on GitHub](https://github.com/decred/dcrandroid/issues)". Ask in #dev room for the APK to join testing.
 
 A new security page was added that allows one to validate addresses and to sign/verify messages, similar to Decrediton's Security Center. Work on translations is beginning.
 
@@ -40,11 +40,11 @@ Up next is supporting dynamic page widths site wide and deploying new visual blo
 
 Trezor: proof of concept implementation for Trezor Model T firmware is [in the works](https://github.com/trezor/trezor-core/pull/358) (previous work was for Model One).
 
-[Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): update to use Go modules, simnet support and several fixes.
+[Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): updated to use Go modules and added simnet support, several fixes.
 
 [docs](https://github.com/decred/dcrdocs): beginner's guide [overhaul](https://github.com/decred/dcrdocs/pull/587), multiple fixes and cleanups.
 
-[decred.org](https://github.com/decred/dcrweb): added 3rd party wallets, removed inactive PoW pools, removed web wallet and multiple fixes.
+[decred.org](https://github.com/decred/dcrweb): added 3rd party wallets, removed inactive PoW pools and removed web wallet.
 
 @Richard-Red is building a [curated list](https://github.com/RichardRed0x/decred-on-github) of Decred-related GitHub repositories.
 
